--- a/index.html
+++ b/index.html
@@ -2,27 +2,32 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <link rel="stylesheet" href="style.css">
-    <title>Arduino</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Home</title>
 </head>
-<body> 
+<body>
     <header>
-    <nav>
-        <a href='index.html'>Home</a>
-        <a href='aplicações.html'>Aplicações do Arduino</a>
-        <a href='dados_da_placa.html'>dados da placa</a>
-        <a href='sensores.html'>sensores</a>
-    </nav>
-</header>
+        <nav>
+            <a href='index.html'>|Home</a>
+            <a href='dadosdaplaca.html'>|Dados da Placa</a>
+            <a href='aplicações.html'>|Aplicações</a>
+            <a href='sensor.html'>|Sensor Analogico</a>
+        </nav>
+    </header>
     <main>
-       <div><h1>Arduino</h1>
-    </div> 
+        <h1>Arduino</h1>
         <article>
-            <p><span>O que e um arduino?</span>Arduino é uma plataforma programável de prototipagem eletrônica de placa única e hardware livre, que permite aos usuários criar objetos eletrônicos interativos e independentes, usando o microcontrolador Atmel AVR ou ARM com suporte de entrada/saída embutido, uma linguagem de programação padrão, essencialmente C/C++.</p>
+            <p><span>Conceito: </span>As placas Arduino são o coração da plataforma de prototipagem eletrônica. Elas são baseadas em microcontroladores AVR ou ARM e oferecem uma variedade de recursos para criar uma ampla gama de projetos. Cada placa Arduino tem suas próprias características distintas, que a tornam adequada para diferentes tipos de aplicações. Por exemplo, o Arduino Uno é popular entre iniciantes devido à sua simplicidade e versatilidade, enquanto o Arduino Mega oferece mais pinos de I/O e memória para projetos mais complexos.</p>
+            <p><span>Informações: </span>As placas Arduino são a base da plataforma de prototipagem eletrônica Arduino. Elas vêm em uma variedade de modelos, como Arduino Uno, Arduino Mega, Arduino Nano e outros, cada um com suas próprias características e capacidades. Essas placas são projetadas para serem acessíveis e fáceis de usar, tornando a eletrônica e a programação mais acessíveis para uma ampla gama de pessoas, desde iniciantes até especialistas.</p>
         </article>
+        <div>
+            <img src="a.jpg" alt="" width= "400px" height= "250px">
+        </div>
     </main>
     <footer>
-        <small>Autor Davi Schoenardie de Almeida &reg; &trade;</small>
+        <small>Autor: Davi Schoenardie de Almeida </Var> &reg; &trade;</small>
     </footer>
+    
 </body>
 </html>
